<resources>
    <string name="app_name">Anotador UNO</string>
    <string name="boton_anotador">Anotador</string>
    <string name="boton_historial">Historial</string>
    <string name="boton_eleccion_grupo">Elegir Grupo</string>
    <string name="boton_crear_grupo">Crear Nuevo Grupo</string>
    <string name="boton_amistoso">Amistoso</string>
    <string name="jugador_uno">Jugador 1</string>
    <string name="jugador_dos">Jugador 2</string>
    <string name="jugador_tres">Jugador 3</string>
    <string name="jugador_cuatro">Jugador 4</string>
    <string name="jugador_cinco">Jugador 5</string>
    <string name="jugador_seis">Jugador 6</string>
    <string name="jugador_siete">Jugador 7</string>
    <string name="jugador_ocho">Jugador 8</string>
    <string name="jugador_nueve">Jugador 9</string>
    <string name="jugador_diez">Jugador 10</string>
    <string name="empezar_partida">Empezar partida</string>
    <string name="faltan_nombres">Todos los jugadores deben tener nombre</string>
    <string name="cantidad_de_jugadores">Cantidad de jugadores: </string>
    <string name="limite_de_puntos">Limite de Puntos: </string>
    <string name="volver_al_inicio">Volver al inicio</string>
    <string name="nueva_partida">Nueva partida</string>
    <string name="llenar_todos_los_casilleros">Debe completar todos los casilleros</string>
    <string-array name="numeros">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
