<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    tools:context=".fragments.AmistosoCrearJugadoresFragment">


    <TextView
        android:id="@+id/textViewCantidadDeJugadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad_de_jugadores"
        android:textAllCaps="true"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="3" />


    <Spinner
        android:id="@+id/spinnerCantidadDeJugadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textAllCaps="true"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/textViewCantidadDeJugadores"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewLimiteDePuntos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/limite_de_puntos"
        android:textAllCaps="true"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCantidadDeJugadores" />

    <EditText
        android:id="@+id/editTextLimiteDePuntos"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:backgroundTint="@color/primary_text"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@id/textViewLimiteDePuntos"
        app:layout_constraintTop_toBottomOf="@id/textViewCantidadDeJugadores" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:foregroundGravity="top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLimiteDePuntos">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jugadorUno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/primary_text"
                android:textColorHint="@color/primary_text"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextJugadorUno"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/jugador_uno"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jugadorDos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/primary_text"
                android:textColorHint="@color/primary_text"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jugadorUno">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextJugadorDos"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/jugador_dos"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jugadorTres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/primary_text"
                android:textColorHint="@color/primary_text"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jugadorDos">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextJugadorTres"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/jugador_tres"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jugadorCuatro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/primary_text"
                android:textColorHint="@color/primary_text"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jugadorTres">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextJugadorCuatro"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/jugador_cuatro"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jugadorCinco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/primary_text"
                android:textColorHint="@color/primary_text"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jugadorCuatro">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextJugadorCinco"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/jugador_cinco"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jugadorSeis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/primary_text"
                android:textColorHint="@color/primary_text"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jugadorCinco">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextJugadorSeis"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/jugador_seis"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jugadorSiete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/primary_text"
                android:textColorHint="@color/primary_text"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jugadorSeis">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextJugadorSiete"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/jugador_siete"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jugadorOcho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/primary_text"
                android:textColorHint="@color/primary_text"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jugadorSiete">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextJugadorOcho"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/jugador_ocho"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jugadorNueve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/primary_text"
                android:textColorHint="@color/primary_text"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jugadorOcho">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextJugadorNueve"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/jugador_nueve"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jugadorDiez"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/primary_text"
                android:textColorHint="@color/primary_text"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jugadorNueve">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextJugadorDiez"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/jugador_diez"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <Button
        android:id="@+id/botonEmpezarPartida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/primary"
        android:text="@string/empezar_partida"
        android:textColor="@color/primary_text"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>