<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons"
    tools:context=".EleccionGrupoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/botonCrearGrupoEleccionFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primary_dark"
            android:paddingLeft="20dp"

            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:text="@string/boton_crear_grupo"
            android:textColor="@color/primary_text"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/botonElegirGrupoEleccionFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/primary_dark"
            android:paddingLeft="75dp"
            android:paddingTop="20dp"
            android:paddingRight="75dp"
            android:paddingBottom="20dp"
            android:text="@string/boton_eleccion_grupo"
            android:textColor="@color/primary_text"
            android:textSize="30sp"
            app:cornerRadius="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/botonCrearGrupoEleccionFragment" />

        <Button
            android:id="@+id/botonAmistosoEleccionFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/primary_dark"
            android:paddingLeft="100dp"
            android:paddingTop="20dp"
            android:paddingRight="100dp"
            android:paddingBottom="20dp"
            android:text="@string/boton_amistoso"
            android:textColor="@color/primary_text"
            android:textSize="30sp"
            app:cornerRadius="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/botonElegirGrupoEleccionFragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>